--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,16 +52,18 @@ dependencies {
     
     //ViewModel + Coroutines
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
+
+    //Room
+    def room_version = "2.5.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     //Moshi
     implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
     implementation 'com.squareup.moshi:moshi:1.14.0'
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.14.0"
-
-    //Epoxy
-    def epoxyVersion = "5.1.1"
-    implementation "com.airbnb.android:epoxy:$epoxyVersion"
-    annotationProcessor "com.airbnb.android:epoxy-processor:$epoxyVersion"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
